changed the pop up message to be left-aligned

--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -260,7 +260,8 @@
                                 <th class="col-md-2">Username</th>
                                 <th class="col-md-3" data-class-name="priority">Timestamp</th>
                                 <th class="col-md-2">Panorama Id</th>
-                                <th class="col-md-5">Comment</th>
+                                <th class="col-md-1">Interface</th>
+                                <th class="col-md-4">Comment</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -270,6 +271,7 @@
                                 </td>
                                 <td>@comment.timestamp</td>
                                 <td>@comment.gsvPanoramaId</td>
+                                <td>@comment.commentType</td>
                                 <td>@comment.comment</td>
                             </tr>
                             }
