--- a/public/javascripts/SVLabel/css/svl-pop-up-message.css
+++ b/public/javascripts/SVLabel/css/svl-pop-up-message.css
@@ -24,7 +24,7 @@
     left: 0;
     visibility: visible;
     width: 730px;
-    text-align: center;
+    text-align: left;
 }
 
 #pop-up-message-foreground p {
