add animation to a simple test arrow down icon

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,7 +37,11 @@
                     @for((cityName, cityURL) <- otherCityURLs) {
                         <a class="exploremaplink" href="@{cityURL + "/audit"}">@cityName</a> &nbsp;
                     }
-
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <p> <a href="#" onclick="scrollDownDisplayContent()">
+                        <i style="font-size:250%; color:#000; border-radius:50%;  border: solid white; padding: 6px" >
+                        </i>
+                    </a></p>
                 </div>
                 <div class="col-sm-3"></div>
             </div>
