test js based css

--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -28,4 +28,9 @@
             <p class="not-a-member">@Html(Messages("navbar.non.member"))</p>
         </div>
     </fieldset>
+    <script>
+        if (isMobile()) {
+            console.log("mobile");
+        }
+    </script>
 }
